--- a/components/byu-header/style.scss
+++ b/components/byu-header/style.scss
@@ -76,6 +76,11 @@
 }
 
 :host([mobile-view]) {
+  
+  .byu-logo {
+    @include mobileLogoAlign();
+  }
+  
   .byu-header-primary {
     @include mobileHeaderAlign();
   }
